
Tue Aug 27 18:17:43 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: remove iconv checks.

2002-08-24  Juli Mallett  <jmallett@FreeBSD.org>

	* configure.in: Recognise OpenBSD/macppc as PowerPC.

Tue Aug 20 15:15:52 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: patch by noa@metamatrix.se (Daniel Resare)
	to error out if bison is missing.

2002-08-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: don't link against libdl on windoze.

2002-08-12  Dick Porter  <dick@ximian.com>

	* mono.pc.in: Add $includedir to Cflags

Fri Jul 19 18:38:38 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in, Makefile.am, mono.pc.in: add a mono.pc file for use
	with pkg-config.
	* */Makefile.am: makefile overhaul to create a shared libmono library.
	* */*.h: do not include config.h in headers that should be installed.

2002-07-12  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Check the size of sockaddr_un.sun_path

2002-06-23  Miguel de Icaza  <miguel@ximian.com>

	* man/Makefile.am (man_MANS): Added new man page

	* man/mono-config.5: New manual page describing the mono-config
	file format. 

2002-06-10  Jaroslaw Kowalski <jarek@atm.com.pl>

	* configure.in: added checks for MSG_NOSIGNAL

2002-05-30  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: update the ado-net web page on go-mono.com
	input parameters support, beginnings of Mono.Data.MySQL 
	and System.Data.OleDb, updated the sample source code,
	and output from a PostgresTest

2002-05-21  Martin Baulig  <martin@gnome.org>

	* mono.1: Documented the "--debug-args" debugging arguments.

2002-05-21  Martin Baulig  <martin@gnome.org>

	* mono.1: Updated to reflect my latest changes and beautified this a bit.
	(FIXME: There are still command line argument which aren't documented here.)

2002-05-19  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: updated page to include C# code snippets using