@@ -3,6 +3,13 @@ INCLUDES = 				\
 	$(GMODULE_CFLAGS)		\
 	$(GLIB_CFLAGS)			
 
+if PLATFORM_WIN32
+export HOST_CC
+# The mingw math.h has "extern inline" functions that dont appear in libs, so
+# optimisation is required to actually inline them
+CFLAGS += -O
+endif
+
 bin_PROGRAMS = mint
 
 mint_SOURCES =		\
