@@ -1,4 +1,8 @@
 
+if PLATFORM_WIN32
+export HOST_CC
+endif
+
 bin_PROGRAMS = monograph
 
 INCLUDES = 				\
