@@ -1,6 +1,6 @@
 #ifndef _MONO_OS_UTIL_H_
 #define _MONO_OS_UTIL_H_ 1
 
-void  mono_set_rootdir (const char *vm_filename);
+void  mono_set_rootdir (void);
 
 #endif
